--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,19 +5,28 @@
 # Required
 version: 2
 
-# Set the OS, Python version, and other tools you might need
+# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
-    python: "3.13"
+    python: "miniconda3-4.7"
 
-# Build documentation in the "docs/" directory with Sphinx
+# Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+  configuration: docs/source/conf.py
+  fail_on_warning: false
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+conda:
+  environment: docs/source/rtd_env.yml
+
+formats: []
+
+#build:
+#  commands: 
+#    - conda activate rtd_env
+
+# We recommend specifying your dependencies to enable reproducible builds:
+# https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 # python:
-#    install:
-#    - requirements: docs/requirements.txt
+#   install:
+#   - requirements: docs/requirements.txt
